smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/expected-shape-id-after-type.smithy
// Parse error at line 4, column 8 near `(`: Expected UNQUOTED([A-Za-z_][A-Za-z0-9_#$.-]*)
namespace com.foo

string (Nope)
